# redbyte

./: .gitignore  Caddyfile  README.md  docker-compose.yml  setup.iss
agent/: agent.sln
agent/RedByte.Agent/: App.xaml  App.xaml.cs  EnrollWindow.xaml  EnrollWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  RedByte.Agent.csproj  StatusWindow.xaml  StatusWindow.xaml.cs  app.manifest
agent/RedByte.Agent/Blocking/: ArpDefender.cs  FirewallManager.cs
agent/RedByte.Agent/Detection/: ArpPoisoningDetector.cs  Detection.cs  DetectionEngine.cs  DetectionReport.cs  (+6 more)
attacks/: arp_cache_poisoning.py  arp_poisoning.py  port_scanning.py
client/: CMakeLists.txt
client/backend/: .gitignore  CMakeLists.txt  README.md
client/backend/client/: CMakeLists.txt  client.cpp
client/backend/src/: Agent.cpp  Agent.h  CMakeLists.txt  Enrollment.cpp  Enrollment.h  IPC.cpp  IPC.h  Startup.cpp  Startup.h  main.cpp
client/backend/src/information/: SystemInfo.cpp  SystemInfo.h
client/backend/src/net/: client.cpp  client.h
client/backend/src/network/: Client.cpp  Client.h  Message.h
client/core/: agent.h
client/frontend/: .env.example  index.js  package-lock.json  package.json  preload.js
client/gui/: enroll_gui.cpp  enroll_gui.h
client/src/: .gitignore  main.cpp
server/: .gitignore  .global.env  Dockerfile  app.py  config.py  database.py  main.py  requirements.txt
server/api/: auth.py  enrollment.py  ws.py  ws_manager.py
server/models/: __init__.py  agent.py  endpoint.py  endpoint_auth.py  enrollment_token.py  event.py  user.py
server/network/: crypto.py  handler.py  protocol.py  server.py
server/services/: agent_services.py  auth_service.py  auth_services.py  endpoints_services.py  enrollment_services.py  event_services.py  token.py  validate_token.py
server/tcp/: server.py
server/ws/: agents.py  events.py  main.py
web/: .env.global  .global.env  Dockerfile  README.md  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: cta-section.tsx  dashboard-preview.tsx  features-section.tsx  footer.tsx  header.tsx  hero-section.tsx  how-it-works-section.tsx  login-form.tsx  register-form.tsx
web/hooks/: use-agents-websocket.ts
web/lib/: api.ts  auth-context.tsx  types.ts
web/styles/: globals.css
(+25 files in other folders)
